Fixed high contrast in Elements panels.
Update the DOM tree panel by fixing missing expanded glyph, removed the
borders, set by the system. The borders should only be visible,
when elements are hovered or selected.

Made sure all the panels, Style, Computed, Event Listeners,
DOM Breakpoints, Properties, and Accessibility, have a hover state,
if there is one, in Default mode. Otherwise, all panels
should be navigable, with keyboard.

Before: https://imgur.com/a/XaXWvFW
After: https://imgur.com/a/1lBV1Br

--- a/front_end/ui/treeoutline.css
+++ b/front_end/ui/treeoutline.css
@@ -165,3 +165,14 @@ ol.tree-outline:not(.hide-selection-when-blurred) li.selected:focus * {
     width: fit-content;
     padding-right: 3px;
 }
+
+@media (forced-colors: active) {
+    .tree-outline li:not(.parent)::before,
+    .tree-outline li:hover:not(.parent)::before {
+        background-color: transparent !important;
+    }
+    .tree-outline li::before {
+        forced-color-adjust: none;
+        background-color: ButtonText !important;
+    }
+}
